patient/force-app/main/default/objects/Contact/fields/Doctor_Role__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Role__c</fullName>
    <label>Doctor Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attending physician</fullName>
            </value>
            <value>
                <fullName>Fellow (optional)</fullName>
            </value>
            <value>
                <fullName>Resident</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Medical Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>