patient/force-app/main/default/objects/Contact/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>IF( AND(NOT(ISBLANK( FirstName )),NOT(ISBLANK(Middle_Name__c)),NOT(ISBLANK( LastName ))) , FirstName+&apos; &apos;+Middle_Name__c+&apos; &apos;+LastName , IF(AND(NOT(ISBLANK(FirstName)),NOT(ISBLANK(LastName ))), FirstName+&apos; &apos;+LastName , FirstName))</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>