patient/force-app/main/default/objects/Contact/fields/Other_Information__c.field-meta.xml
<CustomField>
    <fullName>Other_Information__c</fullName>
    <label>Other Information</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>