patient/force-app/main/default/objects/Contact/fields/PPS_Number__c.field-meta.xml
<CustomField>
    <fullName>PPS_Number__c</fullName>
    <externalId>true</externalId>
    <label>PPS Number</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>