patient/force-app/main/default/objects/Contact/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>Profession</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Receptionist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>